[Performance Panel] Fixing clipped stop button in recording overlay
This CL applies styles when the panel is <325px that rearrange the
dialog contents to fit better, as suggested on the bug's thread.
Screenshots: https://imgur.com/a/tLzk3uE

Bug: 983948

--- a/front_end/panels/timeline/timelineStatusDialog.css
+++ b/front_end/panels/timeline/timelineStatusDialog.css
@@ -54,6 +54,15 @@
   min-width: 80px;
 }
 
+.timeline-status-dialog.small-dialog {
+  width: inherit;
+}
+
+.small-dialog > .stop-button {
+  align-self: center;
+  margin-top: 20px;
+}
+
 @media (forced-colors: active) {
   .timeline-status-dialog {
     border: 1px solid canvastext;
